Bug Fix. Corrected wrong naming of a label

--- a/Remage/Storyboards/Reminders.storyboard
+++ b/Remage/Storyboards/Reminders.storyboard
@@ -91,7 +91,7 @@
                                                         <connections>
                                                             <outlet property="insideCellView" destination="BCR-0w-R9C" id="55k-93-NQV"/>
                                                             <outlet property="thumbnailImageView" destination="vn6-Gw-s3g" id="yZF-2K-tQu"/>
-                                                            <outlet property="titleTextField" destination="xuD-lP-pNR" id="2du-lw-39I"/>
+                                                            <outlet property="titleLabel" destination="xuD-lP-pNR" id="DvC-KL-fJT"/>
                                                         </connections>
                                                     </collectionViewCell>
                                                 </cells>
