--- a/Remage/Storyboards/NewReminder.storyboard
+++ b/Remage/Storyboards/NewReminder.storyboard
@@ -83,17 +83,56 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Camera" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="c3p-KI-yci">
-                                <rect key="frame" x="123" y="418" width="168" height="60"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="50"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Liu-EO-Amv">
+                                <rect key="frame" x="184.5" y="728" width="45" height="45"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="Liu-EO-Amv" secondAttribute="height" multiplier="1:1" id="5vU-Ev-ksa"/>
+                                    <constraint firstAttribute="width" constant="45" id="jqH-sW-HQI"/>
+                                </constraints>
+                                <state key="normal" image="circle" catalog="system"/>
+                            </button>
+                            <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" translatesAutoresizingMaskIntoConstraints="NO" id="55b-1n-fF6">
+                                <rect key="frame" x="15" y="98" width="384" height="30"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dzT-zC-ddU">
+                                        <rect key="frame" x="0.0" y="0.0" width="30" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="30" id="3tq-dH-tL2"/>
+                                            <constraint firstAttribute="width" secondItem="dzT-zC-ddU" secondAttribute="height" multiplier="1:1" id="bdv-qo-hVH"/>
+                                        </constraints>
+                                        <state key="normal" image="camera.rotate" catalog="system"/>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7F3-pk-Fvz">
+                                        <rect key="frame" x="354" y="0.0" width="30" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" secondItem="7F3-pk-Fvz" secondAttribute="height" multiplier="1:1" id="Hca-rQ-1mf"/>
+                                            <constraint firstAttribute="width" constant="30" id="XX5-pc-BxU"/>
+                                        </constraints>
+                                        <state key="normal" image="bolt" catalog="system"/>
+                                    </button>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="dzT-zC-ddU" firstAttribute="width" secondItem="dzT-zC-ddU" secondAttribute="height" multiplier="1:1" id="3Fm-ex-8G6"/>
+                                    <constraint firstItem="7F3-pk-Fvz" firstAttribute="width" secondItem="7F3-pk-Fvz" secondAttribute="height" multiplier="1:1" id="Sb0-po-NdT"/>
+                                    <constraint firstItem="7F3-pk-Fvz" firstAttribute="width" secondItem="7F3-pk-Fvz" secondAttribute="height" multiplier="1:1" id="WV5-ZZ-UjT"/>
+                                </constraints>
+                            </stackView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mjf-Qc-6c6">
+                                <rect key="frame" x="0.0" y="88" width="414" height="725"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
-                            <constraint firstItem="c3p-KI-yci" firstAttribute="centerX" secondItem="ep1-h8-Aqv" secondAttribute="centerX" id="hYx-Q2-1oG"/>
-                            <constraint firstItem="c3p-KI-yci" firstAttribute="centerY" secondItem="ep1-h8-Aqv" secondAttribute="centerY" id="oPM-a7-lZO"/>
+                            <constraint firstItem="mjf-Qc-6c6" firstAttribute="top" secondItem="YE2-xO-AOQ" secondAttribute="top" id="2Ow-XC-SkI"/>
+                            <constraint firstItem="55b-1n-fF6" firstAttribute="top" secondItem="YE2-xO-AOQ" secondAttribute="top" constant="10" id="3Cp-rn-cPz"/>
+                            <constraint firstItem="mjf-Qc-6c6" firstAttribute="trailing" secondItem="YE2-xO-AOQ" secondAttribute="trailing" id="8tK-XL-sqb"/>
+                            <constraint firstItem="mjf-Qc-6c6" firstAttribute="bottom" secondItem="YE2-xO-AOQ" secondAttribute="bottom" id="CYv-t4-ult"/>
+                            <constraint firstItem="YE2-xO-AOQ" firstAttribute="trailing" secondItem="55b-1n-fF6" secondAttribute="trailing" constant="15" id="EcC-Ya-GsH"/>
+                            <constraint firstItem="Liu-EO-Amv" firstAttribute="centerX" secondItem="ep1-h8-Aqv" secondAttribute="centerX" id="JmQ-MX-Rdy"/>
+                            <constraint firstItem="mjf-Qc-6c6" firstAttribute="leading" secondItem="YE2-xO-AOQ" secondAttribute="leading" id="M1l-sU-ovJ"/>
+                            <constraint firstItem="YE2-xO-AOQ" firstAttribute="bottom" secondItem="Liu-EO-Amv" secondAttribute="bottom" constant="40" id="av7-GW-hLv"/>
+                            <constraint firstItem="55b-1n-fF6" firstAttribute="leading" secondItem="YE2-xO-AOQ" secondAttribute="leading" constant="15" id="jVm-c7-MaK"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="YE2-xO-AOQ"/>
                     </view>
@@ -101,7 +140,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="vah-xS-Ugl" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2183" y="-232"/>
+            <point key="canvasLocation" x="2182.608695652174" y="-232.36607142857142"/>
         </scene>
         <!--Add New-->
         <scene sceneID="5Ud-5a-CfE">
@@ -250,7 +289,10 @@
         </scene>
     </scenes>
     <resources>
+        <image name="bolt" catalog="system" width="101" height="128"/>
         <image name="camera" catalog="system" width="128" height="96"/>
+        <image name="camera.rotate" catalog="system" width="128" height="96"/>
+        <image name="circle" catalog="system" width="128" height="121"/>
         <image name="plus" catalog="system" width="128" height="113"/>
         <image name="square.and.pencil" catalog="system" width="128" height="118"/>
     </resources>
