--- a/Remage/Storyboards/NewReminder.storyboard
+++ b/Remage/Storyboards/NewReminder.storyboard
@@ -83,6 +83,10 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mjf-Qc-6c6" customClass="CameraPreviewView" customModule="Remage" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="88" width="414" height="725"/>
+                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </view>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Liu-EO-Amv">
                                 <rect key="frame" x="184.5" y="728" width="45" height="45"/>
                                 <constraints>
@@ -126,10 +130,6 @@
                                     <constraint firstItem="7F3-pk-Fvz" firstAttribute="width" secondItem="7F3-pk-Fvz" secondAttribute="height" multiplier="1:1" id="WV5-ZZ-UjT"/>
                                 </constraints>
                             </stackView>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mjf-Qc-6c6" customClass="CameraPreviewView" customModule="Remage" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="88" width="414" height="725"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                            </view>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
@@ -151,11 +151,42 @@
                         <outlet property="captureImageButton" destination="Liu-EO-Amv" id="bVA-3u-ybD"/>
                         <outlet property="flashButton" destination="7F3-pk-Fvz" id="cvT-Yk-a4W"/>
                         <outlet property="rotateCameraButton" destination="dzT-zC-ddU" id="XJa-92-SKm"/>
+                        <segue destination="cEK-pu-c47" kind="presentation" identifier="ShowPhotoPreviewSegue" modalPresentationStyle="fullScreen" id="vye-Ip-CPw"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="vah-xS-Ugl" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2182.608695652174" y="-232.36607142857142"/>
+        </scene>
+        <!--Photo Preview View Controller-->
+        <scene sceneID="AdM-DL-hFw">
+            <objects>
+                <viewController id="cEK-pu-c47" customClass="PhotoPreviewViewController" customModule="Remage" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="cLg-v4-3dW">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="h3r-kA-61w">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstAttribute="bottom" secondItem="h3r-kA-61w" secondAttribute="bottom" id="3Dd-vV-IOD"/>
+                            <constraint firstItem="h3r-kA-61w" firstAttribute="leading" secondItem="WMu-6f-AqC" secondAttribute="leading" id="anb-Rg-RST"/>
+                            <constraint firstItem="h3r-kA-61w" firstAttribute="top" secondItem="cLg-v4-3dW" secondAttribute="top" id="i4S-Kv-cyf"/>
+                            <constraint firstItem="h3r-kA-61w" firstAttribute="trailing" secondItem="WMu-6f-AqC" secondAttribute="trailing" id="svB-PR-PKI"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="WMu-6f-AqC"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="Ubv-4J-wEU"/>
+                    <connections>
+                        <outlet property="imageView" destination="h3r-kA-61w" id="CoM-jQ-RrB"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="hK3-OT-EHZ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3091.304347826087" y="-232.36607142857142"/>
         </scene>
         <!--Add New-->
         <scene sceneID="5Ud-5a-CfE">
