--- a/Remage/Storyboards/NewReminder.storyboard
+++ b/Remage/Storyboards/NewReminder.storyboard
@@ -151,7 +151,7 @@
                         <outlet property="captureImageButton" destination="Liu-EO-Amv" id="bVA-3u-ybD"/>
                         <outlet property="flashButton" destination="7F3-pk-Fvz" id="cvT-Yk-a4W"/>
                         <outlet property="rotateCameraButton" destination="dzT-zC-ddU" id="XJa-92-SKm"/>
-                        <segue destination="cEK-pu-c47" kind="presentation" identifier="ShowPhotoPreviewSegue" modalPresentationStyle="fullScreen" id="vye-Ip-CPw"/>
+                        <segue destination="cEK-pu-c47" kind="show" identifier="ShowPhotoPreviewSegue" id="vye-Ip-CPw"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="vah-xS-Ugl" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -167,19 +167,26 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="h3r-kA-61w">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                                <rect key="frame" x="0.0" y="88" width="414" height="725"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
-                            <constraint firstAttribute="bottom" secondItem="h3r-kA-61w" secondAttribute="bottom" id="3Dd-vV-IOD"/>
-                            <constraint firstItem="h3r-kA-61w" firstAttribute="leading" secondItem="WMu-6f-AqC" secondAttribute="leading" id="anb-Rg-RST"/>
-                            <constraint firstItem="h3r-kA-61w" firstAttribute="top" secondItem="cLg-v4-3dW" secondAttribute="top" id="i4S-Kv-cyf"/>
-                            <constraint firstItem="h3r-kA-61w" firstAttribute="trailing" secondItem="WMu-6f-AqC" secondAttribute="trailing" id="svB-PR-PKI"/>
+                            <constraint firstItem="h3r-kA-61w" firstAttribute="leading" secondItem="WMu-6f-AqC" secondAttribute="leading" id="VA1-nC-viH"/>
+                            <constraint firstItem="WMu-6f-AqC" firstAttribute="trailing" secondItem="h3r-kA-61w" secondAttribute="trailing" id="kqD-tg-WRb"/>
+                            <constraint firstItem="WMu-6f-AqC" firstAttribute="bottom" secondItem="h3r-kA-61w" secondAttribute="bottom" id="luM-rU-5K1"/>
+                            <constraint firstItem="h3r-kA-61w" firstAttribute="top" secondItem="WMu-6f-AqC" secondAttribute="top" id="r1K-f1-dlu"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="WMu-6f-AqC"/>
                     </view>
-                    <navigationItem key="navigationItem" id="Ubv-4J-wEU"/>
+                    <navigationItem key="navigationItem" id="Ubv-4J-wEU">
+                        <barButtonItem key="rightBarButtonItem" systemItem="save" id="tp4-r8-USm">
+                            <connections>
+                                <action selector="saveButtonTapped:" destination="cEK-pu-c47" id="iXj-6T-ESI"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <connections>
                         <outlet property="imageView" destination="h3r-kA-61w" id="CoM-jQ-RrB"/>
                     </connections>
