--- a/Remage/Storyboards/Reminders.storyboard
+++ b/Remage/Storyboards/Reminders.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16096" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Dca-KL-Xcf">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Dca-KL-Xcf">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
@@ -92,6 +92,7 @@
                                                             <outlet property="insideCellView" destination="BCR-0w-R9C" id="55k-93-NQV"/>
                                                             <outlet property="thumbnailImageView" destination="vn6-Gw-s3g" id="yZF-2K-tQu"/>
                                                             <outlet property="titleLabel" destination="xuD-lP-pNR" id="DvC-KL-fJT"/>
+                                                            <segue destination="Xuo-Ke-zLW" kind="show" identifier="ShowReminderImageSegue" id="12m-o5-1ri"/>
                                                         </connections>
                                                     </collectionViewCell>
                                                 </cells>
@@ -132,11 +133,53 @@
                     <connections>
                         <outlet property="remindersCollectionView" destination="JSR-jW-s61" id="SVv-YL-MEZ"/>
                         <outlet property="remindersCollectionViewHeight" destination="DwL-5d-hAP" id="W6n-wb-jBp"/>
+                        <segue destination="Xuo-Ke-zLW" kind="show" identifier="ShowReminderImageSegue" id="NQP-Aq-Nex"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="gPw-j4-bK3" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="4050.7246376811599" y="91.741071428571431"/>
+        </scene>
+        <!--Reminder Photo View Controller-->
+        <scene sceneID="kTE-cT-J0c">
+            <objects>
+                <viewController id="Xuo-Ke-zLW" customClass="ReminderPhotoViewController" customModule="Remage" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="ZOy-wl-GtE">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="9Lh-Z2-f36">
+                                <rect key="frame" x="0.0" y="88" width="414" height="660"/>
+                            </imageView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="B3n-oO-i1F">
+                                <rect key="frame" x="0.0" y="753" width="414" height="60"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="60" id="DAZ-pm-tG2"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="Zf5-mD-3ym" firstAttribute="bottom" secondItem="B3n-oO-i1F" secondAttribute="bottom" id="3dJ-ED-gaE"/>
+                            <constraint firstItem="B3n-oO-i1F" firstAttribute="top" secondItem="9Lh-Z2-f36" secondAttribute="bottom" constant="5" id="6HP-K9-xy6"/>
+                            <constraint firstItem="Zf5-mD-3ym" firstAttribute="trailing" secondItem="B3n-oO-i1F" secondAttribute="trailing" id="HPO-l8-wSO"/>
+                            <constraint firstItem="9Lh-Z2-f36" firstAttribute="top" secondItem="Zf5-mD-3ym" secondAttribute="top" id="smG-9K-jqu"/>
+                            <constraint firstItem="B3n-oO-i1F" firstAttribute="leading" secondItem="Zf5-mD-3ym" secondAttribute="leading" id="teD-dN-9wP"/>
+                            <constraint firstItem="9Lh-Z2-f36" firstAttribute="leading" secondItem="Zf5-mD-3ym" secondAttribute="leading" id="uol-5p-8Sr"/>
+                            <constraint firstItem="Zf5-mD-3ym" firstAttribute="trailing" secondItem="9Lh-Z2-f36" secondAttribute="trailing" id="y0P-jp-akx"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="Zf5-mD-3ym"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="9ks-xF-D7g"/>
+                    <connections>
+                        <outlet property="bottomView" destination="B3n-oO-i1F" id="CPu-jX-B9R"/>
+                        <outlet property="imageView" destination="9Lh-Z2-f36" id="fKH-rl-t0S"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="8yA-7l-3SQ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="4939" y="92"/>
         </scene>
         <!--Reminders-->
         <scene sceneID="SDs-FA-hmQ">
@@ -159,6 +202,9 @@
             <point key="canvasLocation" x="3140.579710144928" y="91.741071428571431"/>
         </scene>
     </scenes>
+    <inferredMetricsTieBreakers>
+        <segue reference="NQP-Aq-Nex"/>
+    </inferredMetricsTieBreakers>
     <resources>
         <image name="rectangle.3.offgrid" catalog="system" width="128" height="80"/>
     </resources>
